<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MATS</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign In</string>
    <string name="help">Help</string>
    <string name="empty" />
    <string name="please_wait">please wait ....</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="service_name">MATS</string>
    <string name="copyright">Copyright 2015. Swifta Systems.</string>
    <string name="title_activity_home">Welcome </string>
    <string name="home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="float_transfer">Float Transfer</string>
    <string name="verify_withdrawal">Verify Withdrawal</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="merchant_payment">Merchant Payment</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="sell_airtime">Sell Airtime</string>
    <string name="my_account">My Account</string>
    <string name="live_chat">Live Chat</string>
    <string name="title_activity_withdrawal">WithdrawalActivity</string>
    <string name="dealer_account">Dealer Account</string>
    <string name="unregistered_customer">Unregistered Customer</string>
    <string name="complete_previous_cashout">Complete previous cashout (With OTP)</string>
    <string name="token">Token</string>
    <string name="withdraw_from_title">Withdrawal From</string>
    <string name="title_activity_mmoperators">MMOperatorsActivity</string>
    <string name="mmo_operator">MM Operator</string>
    <string name="mm_operatos_title">Select MM Operator</string>
    <string name="ready_cash">Ready Cash</string>
    <string name="fets">FETS</string>
    <string name="teasy_mobile">Teasy Mobile</string>
    <string name="paga">Paga</string>
    <string name="fortis">Fortis</string>
    <string name="title_activity_withdraw_mm">WithdrawMMActivity</string>
    <string name="subscriber_number_hint">Subscriber Number</string>
    <string name="amount_hint">Amount</string>
    <string name="token_hint">Token or Voucher</string>
    <string name="description_hint">Description</string>
    <string name="pin_hint">Customer PIN</string>
    <string name="code_hint">Code</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="float_transfer_options_title">Float Transfer Options</string>
    <string name="bill_payment_options_title">Bill Payment Options</string>
    <string name="title_activity_float_transfer">FloatTransferActivity</string>
    <string name="deposit_float">Deposit Float</string>
    <string name="return_float">Return Float</string>
    <string name="complete_deposit_float">Complete Previous Float(WITH OTP)</string>
    <string name="title_activity_deposit_float">DepositFloatActivity</string>
    <string name="dealer_hint">Dealer ID</string>
    <string name="dummy">Dummy</string>
    <string name="confirm_bill_payment">Confirm Payment Transaction</string>
    <string name="confirm_float">Confirm Float Transfer Transaction</string>
    <string name="dealer_confirmation_title">Dealer OTP Confirmation</string>
    <string name="dealer_confirmation">Enter OTP</string>
    <string name="back">Go Back</string>
    <string name="title_activity_complete_deposit_float">CompleteDepositFloatActivity</string>
    <string name="resume_deposit_float">Complete Deposit Float</string>
    <string name="provide_otp">Provide Dealer OTP</string>
    <string name="reference_number">Reference Number</string>
    <string name="payment_reference">Payment reference</string>
    <string name="change_password">Change your password</string>
    <string name="submit_password">Submit</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="title_activity_account">My Account</string>
    <string name="read_mini_statement">Read Mini Statement</string>
    <string name="title_activity_mini_statement">Mini Statement</string>
    <string name="no_statement">No Mini Statements are available. Please check back later.</string>
    <string name="redeem_code">Redeem code</string>
    <string name="wait">Please wait…</string>
    <string name="empty_credentials">Please fill in the empty fields.</string>
    <string name="internet_connection_error">Unable to connect. Please check your internet connection and try again.</string>
    <string name="short_password">Your password length should be greater than 5. Please check and try again.</string>
    <string name="long_password">Your password length should be less than 30. Please check and try again.</string>
    <string name="processing_request">Currently processing a request, please wait…</string>
    <string name="retry_uncompleted_request">Your request cannot be completed, please try again.</string>
    <string name="unsuccessful_password_change">Password change was unsuccessful. Please try again.</string>
    <string name="successful_password_change">Your password has been changed successfully.
Your new password is &#160;</string>
    <string name="no_uncompleted_transactions">You do not have an uncompleted transaction</string>
    <string name="error_resuming_transactions">Error resuming previous transactions</string>
    <string name="logout_confirmation">Do you want to logout?</string>
    <string name="unprocessed_request">We cannot process your request, please try again.</string>
    <string name="server_error">Please bear with us </string>
    <string name="request_rejection_reason">Your request was rejected because &#160;</string>
    <string name="confirm_float_transfer">Confirm Float Transfer Transaction</string>
    <string name="empty_reference_number">Please fill in the reference number.</string>
    <string name="dstv">DSTV</string>
    <string name="gotv">GoTV</string>
    <string name="mtn">MTN</string>
    <string name="glo">GLO</string>
    <string name="etisalat">Etisalat</string>
    <string name="airtel">Airtel</string>
    <string name="title_activity_bill_payment_form">BillPaymentFormActivity</string>
    <string name="action_search">Search</string>
    <string name="service_phone_number_hint">Phone Number</string>
    <string name="service_acc_number_hint">Account Number</string>
    <string name="service_firstname">First name</string>
    <string name="service_lastname">Last name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="account_balance">Account balance</string>
    <string name="account_balance_value">&#8358;00.00</string>
    <string name="naira_sign">&#8358;</string>
    <string name="todays_transactions">Today\'s Transactions</string>
    <string name="last_five_statements">LAST 5 TRANSACTIONS</string>
    <string name="smile">Smile</string>
    <string name="spectranet">Spectranet</string>
    <string name="startimes">StarTimes</string>
    <string name="irokotv">irokotv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
