<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FloatTransferFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_payment_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_padding"
        android:drawableStart="@drawable/ic_payment_black_24dp"
        android:gravity="start"
        android:text="@string/bill_payment_options_title"
        android:textColor="@color/colorDividerDark"
        android:textSize="@dimen/title_font_size" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/dstv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/dstv"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/gotv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/gotv"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/mtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/mtn"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/glo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/glo"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/etisalat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/etisalat"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/airtel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/btn_separator"
                android:layout_marginEnd="@dimen/btn_separator"
                android:layout_marginRight="@dimen/btn_separator"
                android:background="@drawable/accent_button_selector"
                android:text="@string/airtel"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>

