<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FloatTransferFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_payment_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_padding"
        android:drawableStart="@drawable/ic_payment_black_24dp"
        android:gravity="start"
        android:text="@string/bill_payment"
        android:textColor="@color/colorDividerDark"
        android:textSize="@dimen/title_font_size" />

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/amount_hint"
                    android:inputType="numberSigned"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/service_phone_number_hint"
                    android:inputType="phone"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_acc_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/service_acc_number_hint"
                    android:inputType="number"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/service_firstname"
                    android:inputType="text"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/service_lastname"
                    android:inputType="text"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/service_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_padding"
                    android:ems="10"
                    android:hint="@string/description_hint"
                    android:inputType="text"
                    android:textSize="@dimen/input_font_size" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/service_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_button_selector"
                android:text="@string/submit_password"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/confirm_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_padding"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ListView
            android:id="@+id/preview_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_padding"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/confirm_cancel"
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/btn_separator"
            android:layout_marginRight="@dimen/btn_separator"
            android:layout_weight="1"
            android:background="@drawable/white_button_selector"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_separator"
            android:layout_marginStart="@dimen/btn_separator"
            android:layout_weight="1"
            android:background="@drawable/accent_button_selector"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>


