<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swifta.mats.forms.CashInActivity">

    <LinearLayout
        android:id="@+id/cash_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cash_in_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:ems="10"
                android:hint="@string/amount_hint"
                android:inputType="numberSigned"
                android:textSize="@dimen/input_font_size" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/subscriber_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:ems="10"
                android:hint="@string/subscriber_number_hint"
                android:inputType="phone"
                android:textSize="@dimen/input_font_size" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cash_in_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:ems="10"
                android:hint="@string/description_hint"
                android:inputType="text"
                android:textSize="@dimen/input_font_size" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/cash_in_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/accent_button_selector"
            android:text="@string/cash_in"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
